@@ -1,0 +1,3 @@
+MD5 51635d215ac43d8c90125cc24a28fe46 tellico-1.2.7.tar.gz 4684384
+RMD160 49d8fbcf2207d2c97b811ba9386e91b1a463d9ca tellico-1.2.7.tar.gz 4684384
+SHA256 bc5e8d1aa90d8b6d902d0c1e01814a77dac95188f911e3788c81da6cf4197916 tellico-1.2.7.tar.gz 4684384
